@@ -5,6 +5,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import springboot.get_a_job.dao.UserDao;
+import springboot.get_a_job.models.CustomUserDetails;
 import springboot.get_a_job.models.User;
 
 import java.util.List;
@@ -20,12 +21,13 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     @Transactional
     public UserDetails loadUserByUsername(String email) {
-        User user = userDao.findUserByEmail(email).getFirst();
+        User user = userDao.findUserByEmail(email).get(0);
 
         String roleName = "ROLE_" + user.getAccountType().toUpperCase();
         List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(roleName));
 
-        return new org.springframework.security.core.userdetails.User(
+        return new CustomUserDetails(
+                user.getId(),
                 user.getEmail(),
                 user.getPassword(),
                 authorities
